home pg done needs alignment nd scaling correction

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,166 @@
 @import url('https://fonts.googleapis.com/css2?family=Mate+SC&display=swap');
 
+
+
+
+
+*,
+*::after,
+*::before{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+}
+html{
+    font-size: 1rem;
+}
+
+
+
 body{
     font-family: 'Mate SC', serif;
+    padding: 0;
+    margin:0;
+    background-color: #f4f4f4;
+}
+
+.container{
+    width:80%;
+    margin: auto;
+    padding: auto;
+}
+
+a{
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    font-size: 1rem;
+}
+li{
+    list-style: none;
+    font-size: 1rem;
+    color: #fff;
+}
+ .btn{
+     height: 3rem;
+     width: 2rem;
+     padding: 20rem;
+
+ }
+
+nav{
+    background-color: rgb(41, 41, 41);
+    color: rgb(48, 48, 48);
+    padding-top: 2rem;
+    min-height: 4.5rem;
+    border-bottom: 3px solid #32a0c2;
+}
+
+
+nav a{
+    text-transform: uppercase;
+}
+
+nav li{
+    float: left;
+    display: inline;
+    /* paddind top left bottom right ---- clockwise*/
+    padding:0 1.5rem 0 1.5rem;
+    font-weight: 600;
+}
+
+nav .branding{
+    float: left;
+    font-size: 2rem;
+    font-weight: 1000;
+}
+
+nav .branding a i{
+    margin-right: 0.5rem;
+    color: rgb(0, 225, 255);
+}
+
+nav ul{
+    float: right;
+    margin-top: 0.8rem;
+}
+
+nav ul li a.active{
+    color:#32a0c2;
+    font-weight: 600;
+}
+ 
+nav ul li a:hover{
+    color: #32a0c2;
+    font-weight: 600;
+}
+
+/* nav bar styling end */
+
+/* header styling */
+
+header{
+    min-height: 20rem;
+    background: url(../images/Raf747df4fe1655615d99af2e4dfead5c.jpg) no-repeat center;
+    text-align: center;
+    color: black;
+}
+
+header h1{
+    padding-top:5rem;
+    line-height: 1;
+    height: 5rem;
+}
+
+header p{
+    padding-top: 5rem;
+}
+ 
+/* header over */
+
+/* news letter */
+.newsletter{
+    padding: 3rem;
+    color: #fff;
+    background:rgb(48, 48, 48);
+}
+
+.newsletter form{
+    float:right;
+    margin-top: 0.1rem;
+}
+
+.newsletter h2{
+    float: left;
+    height: 2rem;
+}
+
+.newsletter input[type="email"]:focus{
+    outline: none;
+}
+
+.newsletter .btn{
+    background-color: #32a0c2;
+    border-color: white;
+    
+}
+
+.cards .container{
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+}
+
+.cards .container .card{
+    width: 30%;
+    margin:0 0.5rem;
+    
+}
+
+.cards .container .card h3{
+    font-size: 1.2rem;
+    padding-bottom: 1rem;
+}
+
+.cards .container .card p{
+    padding-bottom: 1rem;
 }
